# auteur

./: .debug  .eslintrc.js  .gitignore  2025-07-19-this-session-is-being-continued-from-a-previous-co.txt  AFTER_EFFECTS_API_GAP_ANALYSIS.md  BUILD_NEEDED.md  CHANGELOG.md  CLAUDE.md  COMPILATION_FIXES_SUMMARY.md  COMPREHENSIVE_TEST_SUITE_SPECIFICATION.md  COMPREHENSIVE_TEST_SUITE_SUMMARY.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  FINAL_BUILD_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  README.md  README_AE_GRAPH_INTEGRATION.md  README_AI_AGENT_RAG.md  README_ENHANCED_RAG.md  README_RAG.md  RUST_VALIDATOR_GAP_ANALYSIS.md  SCRIPT_GENERATOR_QUICKSTART.md  VALIDATOR_EXPECTATIONS.md  Video_understanding.ipynb  ae_graph_context_integration.py  ae_project_graph_ingestion.py  ai-router-part1.js  ai-router-part2.js  another_valid.jsx  asset-manifest.json  call_real_sam2.py  claude_request_debug.json  combined_server.py  comprehensive_test.jsx  count_tokens.py  debug_animation_test  debug_animation_test.rs  debug_deployed_endpoints.py  debug_rag_statistics.js  (+119 more)
.claude/: settings.local.json
CSXS/: manifest.xml
ae_project_context_db/: add_project_data_native.py  deploy_queries.py  project_api_server.py  start_project_context_db.py  test_deployed_queries.py  test_final_system.py  test_mcp_tools.py  test_with_mcp.py
backend/: .env.example  autonomous-fresh.js  graph_navigator_server.py  package-lock.json  package.json  server.js
css/: main.d920bb6b.css.map  styles.css  tabs.css
docs/: activity.md
js/: 845.a1f81c03.chunk.js  845.a1f81c03.chunk.js.map  ai_chat.js  (+7 more)
(+213 files in other folders)
